--- a/cv.html
+++ b/cv.html
@@ -21,7 +21,9 @@
           <a href="contact.html"> <img src="gmail.png" alt="home"
               width="50"
               height="50" /> </a>
+
         </li>
+        <li>hello</li>
         </ul>
 </body>
 </html>
